Fix styling issue where first item in section would overlap section title.

--- a/src/client/pages/Resume/components/EmploymentCard/EmploymentCard.scss
+++ b/src/client/pages/Resume/components/EmploymentCard/EmploymentCard.scss
@@ -1,5 +1,5 @@
 .employment-card-container {
-  margin-top: 13px;
+  margin-bottom: 13px;
 }
 
 .header {
