--- a/src/client/pages/Resume/components/Section/Section.scss
+++ b/src/client/pages/Resume/components/Section/Section.scss
@@ -8,7 +8,6 @@
 
 .section-title-container {
   border-bottom: 1px black solid;
-  margin-bottom: -10px;
 }
 
 .section-title {
